--- a/cartevizita.css
+++ b/cartevizita.css
@@ -103,7 +103,7 @@ small{
        .nav-link{
           color: white;
           font-size: 20px;
-          margin-top: 20px;
+          padding: 20px;
        }
        .navbar{
         padding: 0%;
@@ -158,7 +158,7 @@ small{
         font-size: 25px;
         margin-top: 40px;
     }
-    li{
+    #li{
         margin-left: 30px;
         font-size: 22px;
         margin-bottom: 25px;
