--- a/cinesunt.css
+++ b/cinesunt.css
@@ -15,7 +15,7 @@ body{
     background-size: cover;
   }
 
-h1,h3,p {
+h1,h3,p,li {
   font-family: 'Montserrat' , sans-serif;
 }
 
@@ -63,7 +63,7 @@ small{
      .nav-link{
         color: white;
         font-size: 20px;
-        margin-top: 20px;
+        padding: 20px;
      }
      .navbar{
       padding: 0%;
